src/index.css
/* ... */
.teamDemandFunnelReport .ant-tree,
.teamDemandFunnelReport .ant-tree-show-line,
.teamDemandFunnelReport .ant-tree-switcher {
  background-color: transparent;
}

.textCenter {
  text-align: center;
}

.mainLoader {
  display: flex;
  align-items: center;
  justify-content: center;
  height: calc(100vh - 300px);
}
.pageMainLoader {
  display: flex;
  align-items: center;
  justify-content: center;
  position: fixed;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  background: #f2f2f2;
  z-index: 999;
}

.disabledTransparentBtnGroup {
  opacity: 0.5;
  cursor: no-drop;
}

/**   See Feedback */
.seeFeedback .ant-modal-content .ant-modal-body {
  padding: 0 !important;
}

.seeFeedback .ant-modal-content .ant-modal-close {
  margin-top: 10px;
}

/* Profile Rejection Modal */
.rejectionModalWrap .ant-modal-close {
  top: 20px;
}

/* Match Making Talent - Modal */
.matchMakingModal .ant-collapse-borderless{
  background: transparent;
  margin-bottom: 24px;
}
.matchMakingModal .ant-collapse-borderless > .ant-collapse-item{
  border-color: #F7F7F7;
}
.matchMakingModal .ant-collapse-icon-position-end > .ant-collapse-item > .ant-collapse-header{
  padding: 22px 0 22px 40px;
}
.matchMakingModal .ant-collapse-icon-position-end > .ant-collapse-item > .ant-collapse-header .ant-collapse-arrow{
  right: 0;
}
.matchMakingModal .ant-collapse > .ant-collapse-item > .ant-collapse-header .ant-collapse-extra{
  position: absolute;
  left: 0;
}
.matchMakingModal .ant-collapse > .ant-collapse-item > .ant-collapse-header .ant-collapse-header-text{
  font-size: 16px;
  color: #232323;
}
.matchMakingModal .ant-collapse-content > .ant-collapse-content-box{
  padding: 0 !important;
}
.matchMakingModal .formField{
  margin-bottom: 24px;
}
.ant-checkbox-inner{
  border-color: var(--uplers-black);
  border-radius: 4px;
}
.ant-checkbox-checked .ant-checkbox-inner::after{
  border-width: 1px;
  border-color: var(--text-color-dark);
  width: 4px;
  height: 7px;
  left: 32%;
  top: 45%;
}
.ant-checkbox-wrapper:hover .ant-checkbox-inner,
.ant-checkbox:hover .ant-checkbox-inner,
.ant-checkbox-input:focus+.ant-checkbox-inner{
  border-color: var(--text-color-dark);
}
/* */

/* AM Handover (onborading process) - Modal */
.assignAMModal .ant-modal-close{
  display: none;
}

.assignAMModal .ant-dropdown-menu-title-content{
  white-space: nowrap;
}
/* .assignAMModal .reqField{
  color: #E03A3A;
} */
/* */


/* Ant date picker custom Css Start */
 
.ant-picker{
  text-align: left;
  width: 100%;
  padding: 16px 16px;
  background: var(--background-color-light);
  border: 1px solid #CECCCC;
  border-radius: 8px;
  font-weight: 500;
  font-size: 14px;
  line-height: 20px;
  color: var(--uplers-black);
  outline: 1px solid transparent;
  transition: all 0.25s ease 0s;
  vertical-align: middle;
} 

.ant-picker:hover{
  border: 1px solid #CECCCC;
}

.ant-picker .ant-picker-input > input{
  color: var(--uplers-black);
  font-weight: 500;
}

.ant-picker.ant-picker-focused{
  outline-color: var(--color-sunlight);
  border-color: var(--color-sunlight);
  border: 1px solid var(--color-sunlight);
  box-shadow: inherit;
}

.ant-picker .ant-picker-suffix, .ant-picker .ant-picker-clear{
  display: none;
}

.ant-picker-dropdown tr th:first-child{
  padding-left: 0 !important;
}

/* .ant-picker-dropdown .ant-picker-footer{
  display: none;
} */

.ant-picker-cell-selected .ant-picker-cell-inner{
  background-color: var(--color-sunlight) !important;
  border-radius: 50% !important;
  box-shadow: -4px 4px 20px rgba(57, 57, 57, 0.09) !important;
  color: var(--uplers-black) !important;
}

.ant-picker-dropdown .ant-picker-cell .ant-picker-cell-today{
  font-weight: bold;
}

.ant-picker-cell-in-view.ant-picker-cell-today .ant-picker-cell-inner::before{
  border: 1px solid #fff !important;
}

.ant-picker.ant-picker-range::after {
    content: "";
    position: absolute;
    top: 0;
    left: 50%;
    background: #CECCCC;
    height: 100%;
    width: 1px;
}

.ant-picker .ant-picker-active-bar, .ant-picker .ant-picker-range-separator svg{
  display: none;
}

.ant-picker .ant-picker-input > input::placeholder {
  font-family: "Montserrat";
  font-weight: 500;
  font-size: 14px;
  line-height: 20px;
  color: rgba(107, 107, 107, 0.6);
}

.ant-picker .ant-picker-input > input::-webkit-input-placeholder { 
  font-family: "Montserrat";
  font-weight: 500;
  font-size: 14px;
  line-height: 20px;
  color: rgba(107, 107, 107, 0.6);
}

.ant-picker .ant-picker-input > input:-ms-input-placeholder { 
  font-family: "Montserrat";
  font-weight: 500;
  font-size: 14px;
  line-height: 20px;
  color: rgba(107, 107, 107, 0.6);
}
/* Ant date Time picker custom Css End */

[class*="ant-select-dropdown"][class*="GenerateautocompleteField"]{
  z-index: 9999 !important;
  width: 500px !important;
  min-width: 500px !important;
}

/* jobpostDraftModal css start */
.jobpostDraftModal .ant-modal-header{
  display: none;
}

.jobpostDraftModal .ant-modal-body{
  background: #fff;
  padding: 0px;
} 

.jobpostDraftModal h2 {
  font-size: 32px;
  line-height: 32px;
  color: #232323;
  margin: 0 0 24px;
  padding: 40px 40px 0;
}

/* jobpostDraftModal css End */

#interviewReschedule .ant-select .ant-select-selector .ant-select-selection-search .ant-select-selection-search-input{
  padding: 15px;
  height: 50px;
}

.ant-select .ant-select-selector .ant-select-selection-search .ant-select-selection-search-input {
  height: 50px;
  padding-left: 0px;
}
/* [class*="LinkTableWrap"] .ant-table-tbody > tr > td {
  padding: 10px 12px !important;
}

[class*="LinkTableWrap"] .ant-table-thead > tr > th:first-child, .ant-table-tbody > tr > td:first-child{
  padding-left: 0px !important;
} */

/* .personTaggedValue {
  border-radius: 10px !important;
  padding: 5px !important;
  font-weight: 600 !important;
  background-color: var(--color-champagne) !important;
  font-size: 0.875rem;
  text-align: center;
}
/* ... */

